# contract_simplifier

./: .gitignore  README.md  pyproject.toml  render.yaml
src/contract_simplifier/api/: main.py
src/contract_simplifier/chains/: simplify_contract.py
tests/: test_contract_api.py
